@@ -46,18 +46,21 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="right">
-    <EditText
-      android:layout_height="wrap_content" 
-      android:text="@string/SQLStm"
-      android:id="@+id/SQLStm"
-      android:layout_width="wrap_content"/>
     <Button
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:text="@string/Run"
       android:id="@+id/Run"
       android:gravity="right"
-      android:layout_gravity="right"/>
+      android:layout_gravity="right"
+      android:minWidth="30px"/>
+    <EditText
+      android:layout_height="wrap_content" 
+      android:text="@string/SQLStm"
+      android:id="@+id/SQLStm"
+      android:layout_width="fill_parent"
+      android:inputType="textMultiLine"
+      />
   </LinearLayout>
   <ListView android:id="@+id/LVList"
     android:layout_width="fill_parent"
